Tests/Runtime2/Error/Chain/AlwaysFails.goal
AlwaysFails
- throw error "always fails"
